# Devtalles_Blog_Qwerty_Team_Backend

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  api.http  docker-compose.override.yml  docker-compose.yml  env.example  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 44aecab6a979_fix_default_json_for_images.py  4adb061eacfa_initial_migration.py  84c25e0c8f7d_add_reading_time_to_posts_and_user_.py
app/: db.py  main.py
app/core/: config.py  exception_handlers.py  response_envelope.py
app/dependencies/: auth.py
app/models/: __init__.py  auth_provider.py  category.py  comment.py  like.py  post.py  tag.py  user.py
app/routers/: __init__.py  auth.py  category.py  comment.py  like.py  post.py  tag.py  user.py
app/schemas/: auth.py  category.py  comment.py  like.py  post.py  tag.py
app/services/: category.py  comment.py  discord_auth.py  like.py  post.py  tag.py  user.py
app/utils/: jwt.py
docs/: database_schema.mmd
